phpmyadmin-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: phpmyadmin-deployment
  namespace: phpmyadmin-mysql
  labels:
    app: phpmyadmin-mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: phpmyadmin-mysql
  template:
    metadata:
      labels:
        app: phpmyadmin-mysql
    spec:
      containers:
        - name: phpmyadmin-mysql
          image: phpmyadmin/phpmyadmin
          ports:
            - containerPort: 80
          volumeMounts:
            - mountPath: "/var/lib/mysql"
              subPath: "mysql"
              name: mysql-data
      volumes:
        - name: mysql-data
          persistentVolumeClaim:
            claimName: mysql-data-disk
