phpmyadmin-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: phpmyadmin-service
  namespace: phpmyadmin-mysql
spec:
  selector:
    app: phpmyadmin-mysql
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
