phpmyadmin-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: phpmyadmin-ingress
  namespace: phpmyadmin-mysql
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: phpmyadmin-example.com
      http:
        paths:
          - path: /
            pathType: Prefix  
            backend:
              service:
                name: phpmyadmin-service
                port:
                  number: 80
